Move commodity exposure to bottom of product portfolio section

--- a/index.html
+++ b/index.html
@@ -124,20 +124,6 @@
               <div class="profile-main profile-block">
                 <h3>Product Portfolio</h3>
                 <div id="profile-tiles" class="profile-tiles"></div>
-                <h4>Commodity Exposure</h4>
-                <div class="table-wrap compact-table-wrap">
-                  <table id="commodity-table">
-                    <thead>
-                      <tr>
-                        <th>Commodity</th>
-                        <th>Est. Portion of Portfolio</th>
-                        <th>YoY % Change</th>
-                        <th>QoQ % Change</th>
-                      </tr>
-                    </thead>
-                    <tbody></tbody>
-                  </table>
-                </div>
               </div>
               <div class="profile-main profile-block">
                 <h4>Top 5 Brands</h4>
@@ -151,6 +137,22 @@
                         <th>Sales $</th>
                         <th>Sales % Change YoY</th>
                         <th>Top SKU</th>
+                      </tr>
+                    </thead>
+                    <tbody></tbody>
+                  </table>
+                </div>
+              </div>
+              <div class="profile-main profile-block">
+                <h4>Commodity Exposure</h4>
+                <div class="table-wrap compact-table-wrap">
+                  <table id="commodity-table">
+                    <thead>
+                      <tr>
+                        <th>Commodity</th>
+                        <th>Est. Portion of Portfolio</th>
+                        <th>YoY % Change</th>
+                        <th>QoQ % Change</th>
                       </tr>
                     </thead>
                     <tbody></tbody>
