Move commodity exposure section after category breakout

--- a/index.html
+++ b/index.html
@@ -143,22 +143,6 @@
                   </table>
                 </div>
               </div>
-              <div class="profile-main profile-block">
-                <h4>Commodity Exposure</h4>
-                <div class="table-wrap compact-table-wrap">
-                  <table id="commodity-table">
-                    <thead>
-                      <tr>
-                        <th>Commodity</th>
-                        <th>Est. Portion of Portfolio</th>
-                        <th>YoY % Change</th>
-                        <th>QoQ % Change</th>
-                      </tr>
-                    </thead>
-                    <tbody></tbody>
-                  </table>
-                </div>
-              </div>
             </div>
 
             <div class="split-card">
@@ -179,6 +163,24 @@
                       <tbody></tbody>
                     </table>
                   </div>
+                </div>
+              </div>
+            </div>
+            <div class="split-card">
+              <div class="profile-main profile-block">
+                <h4>Commodity Exposure</h4>
+                <div class="table-wrap compact-table-wrap">
+                  <table id="commodity-table">
+                    <thead>
+                      <tr>
+                        <th>Commodity</th>
+                        <th>Est. Portion of Portfolio</th>
+                        <th>YoY % Change</th>
+                        <th>QoQ % Change</th>
+                      </tr>
+                    </thead>
+                    <tbody></tbody>
+                  </table>
                 </div>
               </div>
             </div>
