--- a/index-alt-2.html
+++ b/index-alt-2.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Supplier Intelligence Dashboard - Aurora Variant</title>
+    <title>Supplier Intelligence Dashboard - Ember Variant</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&family=Sora:wght@400;600;700;800&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;500;600;700&family=DM+Serif+Display:ital@0;1&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles-alt-2.css" />
   </head>
   <body>
     <div class="bg-orb bg-orb-a"></div>
@@ -19,6 +19,7 @@
     <main class="app-shell">
       <section id="dashboard-view" class="view active">
         <header class="hero">
+          <p class="kicker">Ember Theme Variant</p>
           <h1>Supplier Intelligence Dashboard</h1>
           <p class="subtitle">
             Snapshot view of strategic suppliers with sortable performance and cost dynamics.
