--- a/index-alt.html
+++ b/index-alt.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&family=Sora:wght@400;600;700;800&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles-alt.css" />
   </head>
   <body>
     <div class="bg-orb bg-orb-a"></div>
@@ -19,6 +19,7 @@
     <main class="app-shell">
       <section id="dashboard-view" class="view active">
         <header class="hero">
+          <p class="kicker">Aurora Theme Variant</p>
           <h1>Supplier Intelligence Dashboard</h1>
           <p class="subtitle">
             Snapshot view of strategic suppliers with sortable performance and cost dynamics.
