--- a/index-original.html
+++ b/index-original.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Supplier Intelligence Dashboard - Aurora Variant</title>
+    <title>Supplier Intelligence Dashboard</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&family=Sora:wght@400;600;700;800&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,500;9..144,700&family=Manrope:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
@@ -19,6 +19,7 @@
     <main class="app-shell">
       <section id="dashboard-view" class="view active">
         <header class="hero">
+          <p class="kicker">Executive Demo Prototype</p>
           <h1>Supplier Intelligence Dashboard</h1>
           <p class="subtitle">
             Snapshot view of strategic suppliers with sortable performance and cost dynamics.
