Add persistent light/dark mode toggle

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <body>
     <div class="bg-orb bg-orb-a"></div>
     <div class="bg-orb bg-orb-b"></div>
+    <button id="theme-toggle" class="theme-toggle" type="button" aria-pressed="false">Light Mode</button>
 
     <main class="app-shell">
       <section id="dashboard-view" class="view active">
