Add supplier-specific ESG section with verified story links

--- a/index.html
+++ b/index.html
@@ -211,6 +211,12 @@
             </div>
 
             <div class="content-block">
+              <h3>ESG</h3>
+              <p id="esg-summary" class="section-intro"></p>
+              <ul id="esg-list" class="clean-list news-list"></ul>
+            </div>
+
+            <div class="content-block">
               <h3>News Mentions</h3>
               <ul id="news-list" class="clean-list news-list"></ul>
             </div>
