--- a/index.html
+++ b/index.html
@@ -156,11 +156,11 @@
               <ul id="negotiation-approach" class="clean-list"></ul>
             </div>
 
-            <div class="split-card">
-              <div class="profile-main profile-block">
-                <h3>Product Portfolio</h3>
-                <div id="profile-tiles" class="profile-tiles"></div>
-              </div>
+            <div class="content-block portfolio-head">
+              <h3>Product Portfolio</h3>
+            </div>
+
+            <div class="split-card portfolio-tile-card">
               <div class="profile-main profile-block">
                 <h4>Top 5 Brands</h4>
                 <div id="top-brands-coverage" class="top-brands-coverage"></div>
@@ -181,7 +181,7 @@
               </div>
             </div>
 
-            <div class="split-card">
+            <div class="split-card portfolio-tile-card">
               <div class="category-chart-wrap">
                 <h4>Category Breakout</h4>
                 <div class="category-chart-row">
@@ -202,7 +202,7 @@
                 </div>
               </div>
             </div>
-            <div class="split-card">
+            <div class="split-card portfolio-tile-card">
               <div class="profile-main profile-block">
                 <h4>Commodity Exposure</h4>
                 <div class="table-wrap compact-table-wrap">
