Add Nielsen Share column to category breakout

--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
                           <th>% of Supplier Sales</th>
                           <th>Category Sales $</th>
                           <th>% of Category Sales</th>
+                          <th>Nielsen Share %</th>
                         </tr>
                       </thead>
                       <tbody></tbody>
